@@ -1,3 +1,7 @@
+drkns 26.11.2018 23:46:06 +0000 - build 5328
+
+1. 0001726: Entering symbols using Input Method Editor doesn't work.
+
 drkns 25.11.2018 22:07:47 +0000 - build 5327
 
 1. Уточнения обработки исключений.
